# Agents-Test

./: .gitignore  README.md  allergic doc.odt  common cold doc.odt  flu doc.odt  lyme doc.odt  pyproject.toml  report.md  report_Hay_Fever_Allergic_Rhinitis .md  uti doc.odt
cd_agents_project/: README.md
first test reports/: report2.md  report_20250304_145419.md
reports openai/: report_Common_Cold.md  report_Influenza_Flu.md  report_Lyme_Disease.md  report_Urinary_Tract_Infections_UTIs .md
reports_20250311_104631/: report_Common_Cold.md  report_Hay_Fever_Allergic_Rhinitis.md  report_Influenza_Flu.md  report_Lyme_Disease.md  report_Urinary_Tract_Infections_UTIs.md
reports_20250311_142154/: report_Common_Cold.md  report_Hay_Fever_Allergic_Rhinitis.md  report_Influenza_Flu.md  report_Lyme_Disease.md  report_Urinary_Tract_Infections_UTIs.md
reports_20250317_104005/: report_Common_Cold.md  report_Hay_Fever_Allergic_Rhinitis.md  report_Influenza_Flu.md  report_Lyme_Disease.md  report_Urinary_Tract_Infections_UTIs.md
reports_20250317_105326/: report_Common_Cold.md  report_Hay_Fever_Allergic_Rhinitis.md  report_Influenza_Flu.md  report_Lyme_Disease.md  report_Urinary_Tract_Infections_UTIs.md
reports_20250322_093232/: report_sync_Common_Cold.md  report_sync_Influenza_Flu.md  report_sync_Lyme_Disease.md
reports_20250322_093754/: report_sync_Common_Cold.md
reports_20250322_094454/: report_async_Common_Cold.md  report_async_Hay_Fever_Allergic_Rhinitis.md  report_async_Influenza_Flu.md  report_async_Lyme_Disease.md  report_async_Urinary_Tract_Infections_UTIs.md
(+74 files in other folders)
