[project]
name = "cd_agents_project"
version = "0.1.0"
description = "cd_agents_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
cd_agents_project = "cd_agents_project.main:run"
run_crew = "cd_agents_project.main:run"
train = "cd_agents_project.main:train"
replay = "cd_agents_project.main:replay"
test = "cd_agents_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
