[project]
name = "cd_agents_research"
version = "0.1.0"
description = "cd_agents_research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "mlflow>=2.21.0",
]

[project.scripts]
cd_agents_research = "cd_agents_research.main:run"
run_crew = "cd_agents_research.main:run"
train = "cd_agents_research.main:train"
replay = "cd_agents_research.main:replay"
test = "cd_agents_research.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
